# SettingsLoader

./: .travis.yml  CMakeLists.txt  README.md  ReadSettingsFromFile.cpp  ReadSettingsFromFile.h  SettingsLoader.cpp  SettingsLoader.h  build.sh
tests/: CMakeLists.txt  ReadSettingsFromFileTests.cc  SettingsFile01.txt  SettingsFile02.txt  main.cc
